tests/Checker/everything/errors/11d.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 3(5)..3(5): *11: attempt to use an array/function as a scalar
ERROR: 3(5)..3(9): *6 incompatible type for =
Compilation was unsuccessful.
